# Tic-Tac-Toe

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  QUICKSTART.md  README.md  Untitled  compose.yaml  run.bash
client/: .env.example  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css  main.jsx
client/src/components/Board/: index.jsx  styles.module.css
client/src/components/Button/: index.jsx  styles.module.css
client/src/context/: LineraContext.js  LineraContext.jsx
client/src/pages/Home/: index.jsx  styles.module.css
client/src/pages/Result/: index.jsx  styles.module.css
client/src/pages/Room/: index.jsx  styles.module.css
tictactoe/: Cargo.toml
tictactoe/src/: contract.rs  lib.rs  service.rs  state.rs
